# docs/swagger.json
@@ -95,11 +95,6 @@
         },
         "/category/{id}/posts": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "获取某个社区下的所有帖子",
                 "produces": [
                     "application/json"
@@ -109,13 +104,6 @@
                 ],
                 "summary": "获取某个社区下的所有帖子",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer 用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "default": "3730413906300928",
@@ -263,11 +251,6 @@
         },
         "/post/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "帖子详情",
                 "produces": [
                     "application/json"
@@ -277,13 +260,6 @@
                 ],
                 "summary": "帖子详情",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer 用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "default": "3765906580705280",
@@ -305,11 +281,6 @@
         },
         "/posts": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "帖子列表",
                 "produces": [
                     "application/json"
@@ -319,13 +290,6 @@
                 ],
                 "summary": "帖子列表",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer 用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "default": 1,
@@ -423,11 +387,6 @@
         },
         "/v2/posts": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "可以根据发帖时间和帖子分数来获取帖子列表",
                 "produces": [
                     "application/json"
@@ -437,13 +396,6 @@
                 ],
                 "summary": "帖子列表",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer 用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "default": 1,
